# Positional_Convolution_Experts

./: .gitignore  DataAugmentation.py  EMADiffLitModule.py  PCEScheduler.py  README.md  TrainModel.py  class_mapping.json  config.py  main.py  pyproject.toml  train_ResNet18.py
Datasets_Classes/: AdvancedDataAugmentation.py  Cifar10.py  Cifar100.py  PatchExtractor.py  TinyImageNet.py
Doc/: README.md  riassunto.md
Model/: PCE.py
Model/Components/: ConvExpert.py  DownsampleResBlock.py  MoEAggregator.py  PCELayer.py  PatchEmbedder.py  Router.py  SSP.py
Model/Components/Router/: Router.py  RouterGate.py
Testing/: main_experiments.py
Testing/Experiments/: InferenceDataset.py  eval_model.py  log_dense_vs_moe.py  log_moe.py
Testing/inference_samples/: annotations.txt
Training/: CheckpointCallBack.py  Checkpointer.py  EMADiffLitModule.py  Logger.py  README.md  Trainer.py
Training/BackBone_Trainer/: BackboneCheckpointCallBack.py  BackboneLitModule.py  BackboneLoggerCallBack.py
Training/Backbone/: BackboneCheckpointCallBack.py  BackboneLitModule.py  BackboneLoggerCallBack.py
Training/EMA_Diff_Trainer/: EMADiffLitModule.py  EMADiffLoggerCallBack.py
doc/: technical_report.md
